--- a/src/components/app/main/section4/Section4.module.css
+++ b/src/components/app/main/section4/Section4.module.css
@@ -36,4 +36,7 @@
   .section4 {
     padding: 3rem;
   }
+  .section4 div {
+    gap: 2rem;
+  }
 }
